Bug 511220 - Only first Kickoff widget shows results from Discover's AppStream runner
Summary: Only first Kickoff widget shows results from Discover's AppStream runner
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.5.0
Platform: Kubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-27 14:56 UTC by Sylens
Modified: 2026-08-26 08:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments
u can see, on left monitor kickoff menu no discover result was shown, but the other one did (1.09 MB, image/png)
2025-10-27 14:56 UTC, Sylens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sylens 2025-10-27 14:56:30 UTC
Created attachment 186234 [details]
u can see, on left monitor kickoff menu no discover result was shown, but the other one did

SUMMARY
Sometimes randomly only one Kickoff menu shows results from Discover, when having multi monitors and two kickoff widgets on both of my panels. Sometimes the Discover results appear from my main screen, sometimes they appear on the secondary screen

STEPS TO REPRODUCE
Have two panels and two Kickoff menus on different monitors, start typing something that you know it's in the Discovery results

OBSERVED RESULT
Only one of the kickoffmenu shows the result, the other does not

EXPECTED RESULT
all kickoff should give results from Discover software centre

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 25.10
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.17.0-5-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6500 CPU @ 3.20GHz
Memory: 16 GiB of RAM (15.6 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050 Ti
Manufacturer: MSI
Product Name: MS-7972
System Version: 2.0
Comment 1 Nate Graham 2025-10-29 18:44:24 UTC
Did this work as expected in Plasma 6.4.5, or has it been broken for a while?
Comment 2 Nate Graham 2025-10-30 16:07:53 UTC
I can reproduce this issue. How odd. It's not screen dependent; only the first Kickoff works for this; the second and subsequent ones (wherever they're located) don't.
Comment 3 Sylens 2025-10-30 20:26:16 UTC
Hi Nate, thanks for your feedback.

Yeah, it's been present even in 6.4.0. I've gotten Kubuntu installed on my mom's laptop too, where Plasma 6.4.5 is the latest (no backports there), and I can reproduce the issue there aswell.
Comment 4 Bug Janitor Service 2026-08-03 08:08:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6889
Comment 5 cwo 2026-08-26 08:01:13 UTC
Git commit 223f80fd795e749664c822461dbf69cc99908c1a by Christoph Wolk.
Committed on 26/08/2026 at 07:26.
Pushed by vladz into branch 'master'.

runners/appstream: make database static

Querying the appstream runner only works in the first plasma widget
that you are using it in - query something in Kickoff on one monitor
that searches appstream, and all other kickoff etc. widgets on this and
other monitors will not return any appstream results.

The reason is that the appstream runner's match has a static local
variable that tracks whether the appstream pool has been loaded (shared
between all krunner instances in plasmashell), but the appstream pool
itself is a regular member variable (separate for each krunner instance
in plasmashell). So when trying to query the runner in the second or
later widget, the query function will think the pool has been loaded
when it has not in this instance, and return no matches.

Having this be static seems reasonable - the database can be shared
between widgets. We just need to make sure that they are actually
sharing the database, and not just the bool that tracks whether the pool
has been loaded.
FIXED-IN: 6.8.0

M  +6    -4    runners/appstream/appstreamrunner.cpp
M  +1    -1    runners/appstream/appstreamrunner.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/223f80fd795e749664c822461dbf69cc99908c1a