runners/appstream: make database static

Querying the appstream runner only works in the first plasma widget
that you are using it in - query something in Kickoff on one monitor
that searches appstream, and all other kickoff etc. widgets on this and
other monitors will not return any appstream results.

The reason is that the appstream runner's match has a static local
variable that tracks whether the appstream pool has been loaded (shared
between all krunner instances in plasmashell), but the appstream pool
itself is a regular member variable (separate for each krunner instance
in plasmashell). So when trying to query the runner in the second or
later widget, the query function will think the pool has been loaded
when it has not in this instance, and return no matches.

Having this be static seems reasonable - the database can be shared
between widgets. We just need to make sure that they are actually
sharing the database, and not just the bool that tracks whether the pool
has been loaded.

BUG: 511220
FIXED-IN: 6.8.0